# djangondor

./: .gitignore  LICENSE  Pipfile  README.md  README.rst  build.sh  build_doc.sh  publish.sh  pyproject.toml  setup.cfg  setup.py
djangondor/: __init__.py  apps.py  collections.py  http.py  models.py  pandas.py  requests.py  time.py  views.py
djangondor/extras/: documents.py
docs/: INDEX.md  conf.py  index.rst  requirements.txt
src/djangondor/: __about__.py  __init__.py  collections.py  requests.py  time.py
src/djangondor/templatetags/: djangondor_collection_tags.py  djangondor_path_tags.py  djangondor_tags.py
