[metadata]
name = djangondor
version = 1.4.1
description = A collection of django utilities.
long_description = file: README.rst
url = https://github.com/dalitsosakala/djangondor
author = Dalitso Sakala
author_email = dalitso.1sc@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
    openpyxl >= 3.1
    pandas >= 2.1
    XlsxWriter >= 3.1

